--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "git:p": "npm version patch && npm run git && npm run upgrade && npm publish"
   },
   "dependencies": {
-    "@rollup/plugin-dynamic-import-vars": "^2.0.5",
-    "@rollup/plugin-json": "^6.0.0",
-    "@types/figlet": "^1.5.6",
     "axios": "^0.21.1",
     "colors": "^1.4.0",
-    "figlet": "^1.6.0"
+    "figlet": "^1.6.0",
+    "@types/figlet": "^1.5.6"
   },
   "devDependencies": {
+    "@rollup/plugin-dynamic-import-vars": "^2.0.5",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.1.0",
