--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "rollup -c -m",
     "upgrade": "npm i && npm run build",
-    "git": "git add . && git commit -m \"update\" && git push && git fetch && git pull",
+    "git": "git add . && git commit -m \"update\" && git push",
     "git:p": "npm version patch && npm run git && npm run upgrade && npm publish"
   },
   "dependencies": {
