--- a/.npmignore
+++ b/.npmignore
@@ -2,9 +2,12 @@ coverage
 node_modules
 .gitignore
 .npmrc
+src
+.idea
 tsconfig.json
 package.json
 rollup.config.ts
+rollup.config.js
 README.md
 ignorFolder
 ```
