--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "emd-rest",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Helper REST API",
   "main": "dist/index.js",
   "author": "Evyatar Madari",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.16.0"
+  },
   "repository": {
     "type": "git",
     "url": ""
