--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "emd-rest",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Helper REST API",
   "main": "dist/index.js",
   "author": "Evyatar Madari",
@@ -33,5 +33,32 @@
     "rollup": "^2.79.1",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "typescript": "^4.1.2"
-  }
+  },
+  "keywords": [
+    "emd-madari",
+    "madari",
+    "emd",
+    "evyatar",
+    "evyatar madari",
+    "evyatar-madari-emd",
+    "rest",
+    "api",
+    "helper",
+    "rest-api",
+    "rest-helper",
+    "rest-api-helper",
+    "axios",
+    "rest-axios",
+    "rest-api-axios",
+    "rest-helper-axios",
+    "rest-api-helper-axios",
+    "axios-logger",
+    "rest-axios-logger",
+    "rest-api-axios-logger",
+    "rest-helper-axios-logger",
+    "rest-api-helper-axios-logger",
+    "rest-axios-logger-helper",
+    "rest-api-axios-logger-helper",
+    "axios-logger-helper"
+  ]
 }
